--- a/password-generator/src/App.css
+++ b/password-generator/src/App.css
@@ -104,5 +104,11 @@
   .items .checks{
       width: 20px;
   }
-  
+  .form .password-text{
+
+    font-size: 24px;
+    line-height: 24px;
+    color: rgb(102, 102, 102);
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  }
   
