--- a/react-bmi/src/BmiCalculator.css
+++ b/react-bmi/src/BmiCalculator.css
@@ -5,7 +5,7 @@
     gap: 12px;
     align-items: center;
     justify-content: center;
-    background-color: rgb(174, 174, 174);
+    background-color: rgb(215, 248, 240);
     padding: 30px 40px 50px;
     width: 700px;
     position: absolute;
@@ -38,6 +38,14 @@ input{
     font-size: 22px;
 }
 select{
+    padding: 15px 5px ;
+    background: transparent;
+    outline: none;
+    /* border: none; */
+    border-radius: 54px;
+    font-size: 22px;
+}
+button{
     padding: 15px 5px ;
     background: transparent;
     outline: none;
