--- a/unsplashApi/src/components/Unsplash.css
+++ b/unsplashApi/src/components/Unsplash.css
@@ -1,23 +1,59 @@
-/* .search-results{
-    max-width: 1000px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-    display: flex;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;1,200;1,300;1,400&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 
 }
 
-.col{
-    
+body{
+    line-height: 1.6;
+
+}
+h1{
+    font-size: 36px;
+    font-weight: bold;
+    text-align: center;
+    margin: 40px 0 60px 0;
+}
+form{
+    width: 100% ;
     display: flex;
-    flex-direction: column;
-    max-width: 250px;
+    align-items: center;
+    justify-content: space-between;
+    background: #edeef0;
+    border-radius: 30px;
+    max-width: 500px;
+    padding-left: 20px;
+    margin-bottom: 25px;
+    position: relative;
+    transform: translate(-50%,-50%);
+    top: 10%;
+    left: 50%;
+
     
 }
-.col img{
-    object-fit: contain;
-   
-} */
+input{
+    flex: 1;
+    border: none;
+    outline: none;
+    background: transparent;
+    padding:10px ;
+
+}
+button{
+    border: none;
+    outline: none;
+    padding: 16px 50px;
+    background:#ff5945;
+    color:#fff;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 40px;
+
+}
 
 .search-results {
     max-width: 1000px;
@@ -43,3 +79,13 @@
         height: 200px; 
         object-fit: cover; 
       }
+.col h4 a{
+    font-size: 16px;
+    font-weight: bold;
+    color: #ff5945;
+    text-decoration: none;
+}
+#show-more-btn{
+    margin-left: 700px;
+    margin-bottom: 22px;
+}
