--- a/newsApi-project/src/components/News/News.css
+++ b/newsApi-project/src/components/News/News.css
@@ -1,3 +1,23 @@
-/* .News{
+.News{
+    
+    max-width: 1000px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
     display: flex;
-} */
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.card {
+    width: calc(33.33% - 20px); /* Adjust the width as needed */
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    min-width: 200px;
+    padding: 10px;
+    margin-bottom: 50px;
+  }
+  .card img {
+    width: 100%;
+    height: 200px; 
+    object-fit: cover; 
+  }
