--- a/food-app/src/index.css
+++ b/food-app/src/index.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500&display=swap');
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+margin:0;
+padding:0;
+box-sizing: border-box;
+}
+body{
+    background: linear-gradient(to right, #b993d6, #8ca6db);
 }
