--- a/food-app/src/Components/Food/Food.css
+++ b/food-app/src/Components/Food/Food.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500&display=swap');
+*{
+margin:0;
+padding:0;
+box-sizing: border-box;
+}
+body{
+    background: linear-gradient(to right, #b993d6, #8ca6db);
+}
+
 .container{
     min-height: 100vh;
 }
@@ -10,11 +20,11 @@
     border-radius: 30px;
     max-width: 500px;
     padding-left: 20px;
-    margin-bottom: 25px;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 7%;
-    left: 50%;
+    /* margin-bottom: 25px; */
+    margin: auto;
+    margin-top: 22px;
+
+   
 
 }
 input{
@@ -37,4 +47,30 @@ button{
     cursor: pointer;
     font-size: 18px;
     border-radius: 40px;
+}
+.food-container{
+   
+   
+    max-width: 1000px;
+    margin: auto;
+    padding-left: 25px;
+    padding-right: 25px;
+
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+
+}
+.col{
+    flex-basis: 25%;
+    min-width: 200px;
+    padding: 10px;
+    margin-bottom: 50px;
+    transition: 1s all ease-in-out;
+}
+.col img{
+    width: 100%;
 }
