--- a/disneyclone/src/Navbar/Navbar.scss
+++ b/disneyclone/src/Navbar/Navbar.scss
@@ -3,7 +3,7 @@ nav{
     display: flex;
     flex-direction: row;
     padding: 20px;
-    justify-content: space-between;
+    // justify-content: space-between;
     align-items: center;
 
     .nav__left{
@@ -23,12 +23,12 @@ nav{
             align-items: center;
             width: 150px;
             height: 40px;
-            // border: 1px solid white;
+            border: 1px solid white;
             
 
             svg{
-                color: rgb(153, 152, 152);
-                font-size: 20px;
+                color: rgb(199, 199, 199);
+                font-size: 25px;
                 margin-top: 10px;
             }
             img{
@@ -36,6 +36,62 @@ nav{
 
             }
         }
+    }
+
+    .nav__mid{
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        border: 1px solid white;
+        width: 500px;
+        justify-content: center;
+        align-items: flex-start;
+
+        ul{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 15px;
+
+            li{
+                list-style: none;
+                margin: 10px;
+                a{
+                    text-decoration: none;
+                    color: white;
+                    text-transform: uppercase;
+                    font-weight: 500;
+                }
+                div{
+                    
+                    width: 0;
+                    height: 3px;
+                    background-color: transparent;
+                    margin-bottom: 5px;
+                    transition: all .3s ease-in-out;
+                 }
+                 &:hover{
+                     div{
+                         width: 100%;
+                         background-color:rgb(243, 182, 29);
+                     }
+            }
+             }
+        }
+
+
+            .nav__mid-logo{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                // border: 1px solid white;
+                margin-top: 10px;
+                img{
+                    width: 100%;
+                }
+            }
+
     }
 
 }
