--- a/disneyclone/src/index.css
+++ b/disneyclone/src/index.css
@@ -1,9 +1,27 @@
-*{
-margin:0;
-padding:0;
+
+
+
+
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+
+
+:root {
+  --font-base: "DM Sans", sans-serif;
+
+  --primary-color: #edf2f8;
+  --secondary-color: #313bac;
+  --black-color: #030303;
+  --lightGray-color: #e4e4e4;
+  --gray-color: #6b7688;
+  --gray-color1:rgba(188, 194, 205, 0.842);
+  --brown-color: #46364a;
+  --white-color: #ffffff;
+  --myfvt-color:rgb(14 165 233);
 }
-body,html{
-width:100%;
-height:100%;
-box-sizing: border-box;
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
