--- a/disneyclone/src/Navbar/Navbar.scss
+++ b/disneyclone/src/Navbar/Navbar.scss
@@ -1,12 +1,12 @@
-nav{
+nav {
     background-color: #131926;
     display: flex;
     flex-direction: row;
     padding: 20px;
-    // justify-content: space-between;
+    justify-content: space-between;
     align-items: center;
 
-    .nav__left{
+    .nav__left {
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -14,8 +14,8 @@ nav{
         width: 200px;
         // border: 1px solid wheat;
         margin-left: 40px;
-        
-        .nav__left-logos{
+
+        .nav__left-logos {
             display: flex;
             flex-direction: row;
             gap: 20px;
@@ -23,75 +23,89 @@ nav{
             align-items: center;
             width: 150px;
             height: 40px;
-            border: 1px solid white;
-            
+            // border: 1px solid white;
+            margin-top: -14px;
 
-            svg{
+
+            svg {
                 color: rgb(199, 199, 199);
                 font-size: 25px;
                 margin-top: 10px;
             }
-            img{
+
+            img {
                 width: 80%;
 
             }
         }
     }
 
-    .nav__mid{
+    .nav__mid {
         display: flex;
         flex-direction: row;
         gap: 20px;
-        border: 1px solid white;
-        width: 500px;
-        justify-content: center;
-        align-items: flex-start;
+        // border: 1px solid white;
+        width: 700px;
+        justify-content: flex-start;
+        align-items: center;
+      
 
-        ul{
+        ul {
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items:center;
             gap: 15px;
 
-            li{
+            li {
                 list-style: none;
                 margin: 10px;
-                a{
+
+                a {
                     text-decoration: none;
                     color: white;
                     text-transform: uppercase;
                     font-weight: 500;
                 }
-                div{
-                    
+
+                div {
+
                     width: 0;
                     height: 3px;
                     background-color: transparent;
                     margin-bottom: 5px;
                     transition: all .3s ease-in-out;
-                 }
-                 &:hover{
-                     div{
-                         width: 100%;
-                         background-color:rgb(243, 182, 29);
-                     }
+                }
+
+                &:hover {
+                    div {
+                        width: 100%;
+                        background-color: rgb(243, 182, 29);
+                    }
+                }
             }
-             }
         }
 
 
-            .nav__mid-logo{
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                // border: 1px solid white;
-                margin-top: 10px;
-                img{
-                    width: 100%;
-                }
-            }
+        .nav__mid-logo {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            
+            margin-top: -5px;
 
+            img {
+                width: 100%;
+            }
+        }
+
+    }
+    .nav__right{
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        border: 1px solid white;
+        width: 500px;
     }
 
 }
