--- a/disneyclone/src/Navbar/Navbar.scss
+++ b/disneyclone/src/Navbar/Navbar.scss
@@ -106,16 +106,17 @@ nav {
         align-items: flex-end;
         // border: 1px solid white;
         width: 500px;
+        gap: 20px;
 
         .nav__right-search{
             display: flex;
             justify-content: center;
             align-items: center;
             width: 300px;
+            border-bottom: 1px solid white;
             input{
                 outline: 0;
                 border: 0;
-                border-bottom: 1px solid white;
                 padding: 3px 8px;
                 width: 100%;
                 background-color: #131926;
@@ -123,6 +124,34 @@ nav {
                 font-size: 13px;
 
 
+            }
+            svg{
+                color: white;
+                font-size: 22px;
+                margin-bottom: 3px;
+
+            }
+        }
+        .nav__right-btns{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            // border: 1px solid white;
+            gap: 20px;
+            
+            button{
+                padding: 4px 8px;
+                color: white;
+                background-color: #459ff3;
+                font-weight: 600;
+                border: 0;
+                border-radius: 5px;
+            }
+            .login-btn{
+                padding: 4px 6px;
+                color: white;
+                background-color:#131926;
+                font-weight: 600;
             }
         }
     }
