--- a/disneyclone/src/Navbar/Navbar.scss
+++ b/disneyclone/src/Navbar/Navbar.scss
@@ -5,6 +5,7 @@ nav {
     padding: 20px;
     justify-content: space-between;
     align-items: center;
+    font-family:"DM Sans", sans-serif;
 
     .nav__left {
         display: flex;
