--- a/disneyclone/src/Header/Header.scss
+++ b/disneyclone/src/Header/Header.scss
@@ -3,24 +3,63 @@
     padding: 30px;
     height: 700px;
     // border: 1px solid white;
+    font-family:"DM Sans", sans-serif;
 
     .slider__data{
-        position: relative;
+
      
-       border: 1px solid white;
+    //    border: 1px solid white;
        display: flex;
-       flex-direction: column;
+       flex-direction: row;
        justify-content: center;
        align-items: center;
+       padding: 30px;
+       gap: 10px;
 
        .slider__images-single{
-        width: 100%;
-        height: 500px;
+           flex: 1.5;
+           height: 450px;
+           border: 1px solid rgb(25, 25, 25);
+           
+           
+           box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+           
        }
        img{
         height: 100%;
         width: 100%;
+        border-radius: 15px;
        }
+
+       .slider__images-info{
+        flex: 1;
+        padding: 25px;
+        height: 450px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        // border: 1px solid white;
+        align-items: center;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+       
+        gap: 20px;
+        // border: 1px solid white;
+
+        h3{
+            font-size: 45px;
+            color: rgb(243, 182, 29);
+            letter-spacing: 5px;
+            
+        }
+        p{
+            text-align: center;
+            margin-top: 10px;
+            font-size: 15px;
+            color: aliceblue;
+
+        }
+       }
+
 
     }
 }
