--- a/disneyclone/src/Header/Header.scss
+++ b/disneyclone/src/Header/Header.scss
@@ -49,6 +49,8 @@
             font-size: 45px;
             color: rgb(243, 182, 29);
             letter-spacing: 5px;
+            letter-spacing: 5px;
+            white-space: 5px;
             
         }
         p{
@@ -56,6 +58,9 @@
             margin-top: 10px;
             font-size: 15px;
             color: aliceblue;
+            // letter-spacing: 5px;
+            white-space: 5px;
+            line-height: 30px;
 
         }
        }
