--- a/disneyclone/src/Header/Header.scss
+++ b/disneyclone/src/Header/Header.scss
@@ -1,7 +1,7 @@
 .slider{
     background-color: #0C111B;
     padding: 30px;
-    height: 700px;
+    // height: 700px;
     // border: 1px solid white;
     font-family:"DM Sans", sans-serif;
 
